--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <!--<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>-->
-    <title>Data Networks</title>
+    <title>@leguiart</title>
 	<link href="assets/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="header">
       <div class="container">
-        <h1>Data Networks</h1>
-        <p>2019-1</p>
+        <h1>Luis Eguiarte</h1>
+        <p>Computer Engineer</p>
       </div>
     </div>
 
@@ -28,13 +28,13 @@
       <div class="container">
         <img src="images/internet-things.jpg" height="300" width="370">
         <h2>Internet of Things</h2>
-        <p>In the broadest sense, the term IoT encompasses everything connected to the internet, but it is increasingly being used to define objects that "talk" to each other. 
-        "Simply, the Internet of Things is made up of devices - from simple sensors to smartphones and wearables - connected together," 
+        <p>In the broadest sense, the term IoT encompasses everything connected to the internet, but it is increasingly being used to define objects that "talk" to each other.
+        "Simply, the Internet of Things is made up of devices - from simple sensors to smartphones and wearables - connected together,"
         Matthew Evans, the IoT programme head at techUK, says. </p>
-        <p>By combining these connected devices with automated systems, it is possible to "gather information, analyse it and create an action" to help someone with a particular task, or learn from a process. 
+        <p>By combining these connected devices with automated systems, it is possible to "gather information, analyse it and create an action" to help someone with a particular task, or learn from a process.
           In reality, this ranges from smart mirrors to beacons in shops and beyond. </p>
-        <p>"It's about networks, it's about devices, and it's about data," Caroline Gorski, the head of IoT at Digital Catapult explains. 
-          IoT allows devices on closed private internet connections to communicate with others and "the Internet of Things brings those networks together. 
+        <p>"It's about networks, it's about devices, and it's about data," Caroline Gorski, the head of IoT at Digital Catapult explains.
+          IoT allows devices on closed private internet connections to communicate with others and "the Internet of Things brings those networks together.
           It gives the opportunity for devices to communicate not only within close silos but across different networking types and creates a much more connected world." </p>
       </div>
       <div class="container">
