--- a/me.html
+++ b/me.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <!--<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>-->
-    <title>Data Networks</title>
+    <title>@leguiart me</title>
 	<link href="assets/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="header">
       <div class="container">
-        <h1>Data Networks</h1>
-        <p>2019-1</p>
+        <h1>Luis Eguiarte</h1>
+        <p>Software Engineer</p>
       </div>
     </div>
 
@@ -27,10 +27,10 @@
     <div class="main">
       <div class="container">
         <h2>Who am I?</h2>
-        <p> I am a person constantly in the process of learning from everyone, from everything around me, from my experiences, and from all my life in 
-        general, I'm looking constantly for information to process, I like knowledge and to deepen it all the time, 
-        I like to know stuff and to create amazing things with that acquired knowledge, I love to create and experiment in the context of software, 
-        and physics simulations that's why I love to learn about engineering, computer science (particularilly Computer Graphics, AI & Machine Learning), 
+        <p> I am a person constantly in the process of learning from everyone, from everything around me, from my experiences, and from all my life in
+        general, I'm looking constantly for information to process, I like knowledge and to deepen it all the time,
+        I like to know stuff and to create amazing things with that acquired knowledge, I love to create and experiment in the context of software,
+        and physics simulations that's why I love to learn about engineering, computer science (particularilly Computer Graphics, AI & Machine Learning),
         physics and mathematics, to view these fields in a holistic fashion and connect them with my life experiences. </p>
       </div>
       <div class="container">
