--- a/resume.html
+++ b/resume.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <!--<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>-->
-    <title>Data Networks</title>
+    <title>@leguiart Resume</title>
 	<link href="assets/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="header">
       <div class="container">
-        <h1>Data Networks</h1>
-        <p>2019-1</p>
+        <h1>Luis Eguiarte</h1>
+        <p>Software Engineer</p>
       </div>
     </div>
 
@@ -31,7 +31,7 @@
       </div>
       <div class="container">
           <h2>Resume</h2>
-          
+
         </div>
     </div>
 
