more modifications broza

--- a/me.html
+++ b/me.html
@@ -3,13 +3,14 @@
   <head>
     <!--<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>-->
     <title>@leguiart me</title>
-	<link href="assets/css/style.css" type="text/css" rel="stylesheet">
+	  <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   </head>
   <body>
     <div class="header">
       <div class="container">
         <h1>Luis Eguiarte</h1>
-        <p>Software Engineer</p>
+        <p>Computer Engineer</p>
       </div>
     </div>
 
@@ -27,11 +28,11 @@
     <div class="main">
       <div class="container">
         <h2>Who am I?</h2>
-        <p> I am a person constantly in the process of learning from everyone, from everything around me, from my experiences, and from all my life in
-        general, I'm looking constantly for information to process, I like knowledge and to deepen it all the time,
+        <p> I am a young developer currently studying Computer engineering, constantly in the process of learning from everyone, from everything around me, from my experiences, and from all my life in
+        general, I'm looking constantly for information to process, I love gaining knowledge and experiences and to deepen both all the time,
         I like to know stuff and to create amazing things with that acquired knowledge, I love to create and experiment in the context of software,
         and physics simulations that's why I love to learn about engineering, computer science (particularilly Computer Graphics, AI & Machine Learning),
-        physics and mathematics, to view these fields in a holistic fashion and connect them with my life experiences. </p>
+        physics and mathematics and to view these fields in a holistic fashion and connect them with my life experiences. </p>
       </div>
       <div class="container">
         <h2>Interests</h2>
