--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <!--<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>-->
     <title>@leguiart</title>
-	<link href="assets/css/style.css" type="text/css" rel="stylesheet">
+	  <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   </head>
   <body>
     <div class="header">
