--- a/resume.html
+++ b/resume.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <!--<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>-->
-    <title>@leguiart Resume</title>
-	<link href="assets/css/style.css" type="text/css" rel="stylesheet">
+    <title>@leguiart</title>
+	  <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   </head>
   <body>
     <div class="header">
       <div class="container">
         <h1>Luis Eguiarte</h1>
-        <p>Software Engineer</p>
+        <p>Computer Engineer</p>
       </div>
     </div>
 
@@ -26,13 +27,10 @@
 
     <div class="main">
       <div class = "container">
-          <h2></h2>
-          <img src = "images/cv.png" width="800" height="1000">
-      </div>
-      <div class="container">
-          <h2>Resume</h2>
-
-        </div>
+           <h2 id = "pdf-text">Resumé</h2>
+           <embed id = "pdf" src="Files/CurriculumVitaeENG.pdf" width="1200px" height="1200px" />
+           <!--<img src = "images/cv.png" width="800" height="1000">-->
+       </div>
     </div>
 
     <div class="jumbotron">
