--- a/schedule.html
+++ b/schedule.html
@@ -3,12 +3,13 @@
 	<head>
 		<title>@leguiart Schedule</title>
 		<link href="assets/css/style.css" type="text/css" rel="stylesheet">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	</head>
 	<body>
 		<div class="header">
 			<div class="container">
 				<h1>Luis eguiarte</h1>
-				<p>Software Engineer</p>
+				<p>Computer Engineer</p>
 			</div>
 		</div>
 
@@ -48,14 +49,14 @@
               <tr>
                 <td> 8:00 - 9:00 a.m. </td>
 
-                <td rowspan="8" >Work</td>
+                <td rowspan="8" >Chores & Freetime</td>
 
-                <td rowspan="8"> Work </td>
+                <td rowspan="8"> Chores & Freetime</td>
 
               </tr>
               <tr>
                 <td> 9:00 - 10:00 a.m. </td>
-                <td rowspan="7"> Work </td>
+                <td rowspan="7"> Chores & Freetime </td>
 
 
 
@@ -67,7 +68,7 @@
 
 
 
-                <td rowspan="4">Work</td>
+                <td rowspan="4"> Freetime </td>
               </tr>
               <tr>
                 <td> 11:00 - 12:00 a.m. </td>
@@ -81,7 +82,7 @@
                 <td> 12:00 - 1:00 p.m. </td>
 
 
-                <td rowspan="4">Work</td>
+                <td rowspan="4">Chores</td>
 
 
               </tr>
